feat: implemented POST endpoint for creating USERS / ADMIN
