# docs/swagger.json
@@ -48,7 +48,7 @@
         },
         "/auth/registration": {
             "post": {
-                "description": "Registration endpoint for user new users to register for an account, after registering for an account, the user will be able to login to the system and obtain a JWT Token",
+                "description": "Endpoint for Superadmin to create Users / Admin",
                 "consumes": [
                     "application/json"
                 ],
@@ -56,9 +56,9 @@
                     "application/json"
                 ],
                 "tags": [
-                    "authentication"
+                    "user"
                 ],
-                "summary": "Registration",
+                "summary": "Create an Account",
                 "parameters": [
                     {
                         "description": "Registration",
@@ -66,7 +66,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.AuthRegistrationRequest"
+                            "$ref": "#/definitions/models.UserCreateRequest"
                         }
                     }
                 ],
@@ -74,7 +74,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.AuthRegistrationResponse"
+                            "$ref": "#/definitions/models.User"
                         }
                     },
                     "400": {
@@ -1346,6 +1346,26 @@
                 },
                 "user_id": {
                     "type": "string"
+                },
+                "user_type": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.UserCreateRequest": {
+            "type": "object",
+            "required": [
+                "email",
+                "password",
+                "user_type"
+            ],
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string",
+                    "minLength": 6
                 },
                 "user_type": {
                     "type": "string"
